Serve the file and directory schemes, so a file can be opened as a port
A file port is the one port that behaves like a series. It has a
position: SKIP and BACK move it, HEAD and TAIL go to the ends, INDEX?
reports it, and READ takes from it and leaves it past what it took -- so
reading a port twice gives the whole file and then nothing. Nothing is
buffered here; the position lives on the port and the bytes stay on the
filesystem, so two ports open on one file see each other's writes.

LENGTH? and SIZE? are the pair worth keeping straight. LENGTH? counts
what is left from the position and SIZE? counts the whole file wherever
the position stands, so after writing one byte at the head the length is
nothing and the size is one. On a directory port LENGTH? counts names
instead, there being no bytes to be part way through, which is the only
reading of EMPTY? that means anything there.

Which operations mind a closed port is not obvious and is not arbitrary.
Everything about the position raises not-open, because a closed port has
no position. SIZE? does not, being about the file. READ and WRITE do not
either -- they open it, do the work and close it again, which is why a
script can read the same closed port three times and get the whole file
each time. All three answers were read off a running 3.22.5.